# turingViz

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
src/: drawable.cpp  drawable.h  drawable.hpp  helper.cpp  helper.h  machine.cpp  machine.h  machine.hpp  tape.cpp  tape.h  tape.hpp  util.hpp  viz.cpp  viz.h  viz.hpp
src/TuringMachine/: counting.javaturing  doubling.javaturing  doubling2.turing  sqrt2.javaturing  turingMachine.hpp
src/graphics/: graphics.cpp  graphics.h
